<resources>
    <string name="app_name">UARKRegisterApp</string>
    <string name="title_activity_products_listing">Products</string>
    <string name="title_activity_cart_products_listing">Cart</string>
    <string name="title_activity_search_results_listing">SearchResults</string>
    <string name="title_activity_sign_up">Sign up page</string>
    <string name="title_activity_product_view">ProductViewActivity</string>
    <string name="title_activity_employee_view">EmployeeViewActivity</string>
    <string name="title_activity_employee_listing">Employees</string>
    <string name="title_activity_Sales_Report_view">Sales Reports</string>
    <string name="title_activity_Sales_Report_employee_view">Employee Sales Report</string>
    <string name="title_activity_product_Sales_Report_employee_view">Product Sales Report</string>
    <string name="title_activity_best_selling_cashier_view">Best Selling Cashier</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_transaction">Start transaction</string>
    <string name="button_create_employee">Create employee</string>
    <string name="button_product_search">Product search</string>>
    <string name="shopping_chart">shopping chart</string>
    <string name="button_inventory">Inventory</string>
    <string name="text_view_landing_welcome">Welcome {name}! What would you like to do next?</string>
    <string name="text_view_products_lookup_code">LookupCode</string>
    <string name="text_view_product_total_sales">Product Sold</string>
    <string name="text_view_employees_recordID">recordID</string>
    <string name="text_view_employees_first_name">first name</string>
    <string name="text_view_employees_last_name">last name</string>
    <string name="text_view_employees_employee_ID">employee ID</string>
    <string name="text_view_employees_active">active</string>
    <string name="text_view_employees_role">role</string>
    <string name="text_view_employees_manager">manager</string>
    <string name="text_view_employees_total_sales">total sales</string>
    <string name="text_view_employees_sales">0</string>
    <string name="text_view_products_count">0</string>
    <string name="text_view_products_price">price</string>
    <string name="text_view_employees_count">0</string>
    <string name="text_view_products_created_on">01/01/1970</string>
    <string name="text_view_employees_created_on">01/01/1970</string>
    <string name="text_view_label_products_lookup_code">Lookup Code:</string>
    <string name="text_view_label_employees_recordID">Record ID:</string>
    <string name="text_view_label_employees_first_name">First Name:</string>
    <string name="text_view_label_employees_last_name">Last Name:</string>
    <string name="text_view_label_employees_employee_ID">Employee ID:</string>
    <string name="text_view_label_employees_active">Active:</string>
    <string name="text_view_label_employees_role">Role:</string>
    <string name="text_view_label_employees_manager">Manager:</string>
    <string name="text_view_label_products_count">Count:</string>
    <string name="text_view_label_products_price">Price:</string>
    <string name="text_view_label_employees_count">Count:</string>
    <string name="text_view_label_products_created_on">Created On:</string>
    <string name="text_view_label_employees_created_on">Created On:</string>
    <string name="alert_dialog_products_loading">Loading Products</string>
    <string name="alert_dialog_employees_loading">Loading Employees</string>
    <string name="alert_dialog_product_save">Saving Product…</string>
    <string name="alert_dialog_employee_save">Saving Employee…</string>
    <string name="alert_dialog_logging_employee_in">Logging in…</string>
    <string name="alert_dialog_product_delete">Deleting Product…</string>
    <string name="alert_dialog_employee_delete">Deleting Employee…</string>
    <string name="alert_dialog_product_save_success">The product was successfully saved.</string>
    <string name="alert_dialog_employee_save_success">The employee was successfully saved.</string>
    <string name="alert_dialog_product_save_failure">An issue was encountered when attempting to save the product. The changes were not saved.</string>
    <string name="alert_dialog_employee_save_failure">An issue was encountered when attempting to save the employee. The changes were not saved.</string>
    <string name="alert_dialog_product_delete_success">The product was successfully deleted.</string>
    <string name="alert_dialog_employee_delete_success">The employee was successfully deleted.</string>
    <string name="alert_dialog_product_delete_failure">An issue was encountered when attempting to delete the product. You can try again to delete the product.</string>
    <string name="alert_dialog_employee_delete_failure">An issue was encountered when attempting to delete the employee. You can try again to delete the employee.</string>
    <string name="alert_dialog_products_load_failure">Unable to load products listing.</string>
    <string name="alert_dialog_employees_load_failure">Unable to load employees listing.</string>
    <string name="alert_dialog_product_delete_confirm">Are you sure you want to delete this product? This action cannot be undone.</string>
    <string name="alert_dialog_employee_delete_confirm">Are you sure you want to delete this employee? This action cannot be undone.</string>
    <string name="validation_product_lookup_code">Product lookup code may not be empty.</string>
    <string name="validation_employee_recordID">Employee lookup code may not be empty.</string>
    <string name="validation_product_count">Product count must be a number and may not be negative.</string>
    <string name="validation_product_price">Product price must be a number and may not be negative.</string>
    <string name="validation_employee_count">Employee count must be a number and may not be negative.</string>
    <string name="intent_extra_product">intent_extra_product</string>
    <string name="intent_sales_report">intent_sales_report</string>
    <string name="intent_extra_employee">intent_extra_employee</string>
    <string name="intent_extra_sampleapp">intent_extra_sampleapp</string>
    <string name="item_removed_message">Item successfully removed</string>
    <string name="item_removed_error_message">Failed to remove item</string>
    <string name="add_item_to_cart_message">Added to cart</string>
    <string name="add_item_to_cart_error_message">Failed to add to cart</string>
    <string name="transaction_complete_message">Transaction complete</string>
    <string name="transaction_complete_error_message">Failed to complete Transaction</string>
    <string name="welcome">Welcome,</string>
    <string name="login">Login</string>
    <string name="search_title">Search</string>
    <string name="taxes_and_subtotal_formatting">$  %.2f</string>
    <string name="search_hint">Search Products</string>
    <string name="logging_in">Logging You In…</string>
    <string name="sign_out">Sign Out</string>
    <string name="todo">TODO</string>
    <string name="this_is_a_popup_window">this is a popup window</string>
    <string name="_0">0</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="total">Total:</string>
    <string name="subtotal">Subtotal</string>
    <string name="taxes">Taxes</string>
    <string name="qty">QTY</string>
    <string name="checkout">CheckOut</string>
    <string name="textview">TextView</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="ADD">ADD</string>
    <string name="button_sales_report">Sales Reports</string>
    <string name="cashier_sales">Cashier Sales</string>
    <string name="product_sales">Product Sales</string>
    <string name="Best_Selling_Product">Best Selling Product</string>
    <string name="Best_Selling_Cashier">Best Selling Cashier</string>
    <string name="best_selling_product">Best Selling Product</string>
</resources>
