<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_landing"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uark.uarkregisterapp.LandingActivity">

    <TextView
        android:id="@+id/text_view_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:text="@string/text_view_landing_welcome"/>

    <Button
        android:id="@+id/button_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/button_transaction"
        android:onClick="displayTransactionButtonOnClick"/>

    <Button
        android:id="@+id/button_create_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_transaction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/button_create_employee"
        android:onClick="displayCreateEmployeeButtonOnClick"/>

    <Button
        android:id="@+id/button_sales_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_create_employee"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/button_sales_report"
        android:onClick="SalesReportButtonOnClick"/>

    <Button
        android:text="@string/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/button_create_employee"
        android:textColor="#FFFFFF"
        android:background="#00a1f1"
        android:textAllCaps="false"
        android:id="@+id/clearCache"
        android:visibility="visible" />

</RelativeLayout>
