<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/employee_landing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.uark.uarkregisterapp.LandingActivity">

    <android.support.design.button.MaterialButton
        android:id="@+id/clearCache2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="30dp"
        android:background="#00a1f1"
        android:elevation="5dp"
        android:onClick="SignOut"
        android:text="@string/sign_out"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_wrapHeight="168"
        tools:layout_conversion_wrapWidth="1328" />

    <TextView
        android:id="@+id/text_view_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_landing_welcome"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_wrapHeight="71"
        tools:layout_conversion_wrapWidth="1178" />

    <android.support.design.button.MaterialButton
        android:id="@+id/button_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="startTransactionButtonOnClick"
        android:text="@string/button_transaction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_welcome"
        tools:layout_conversion_wrapHeight="168"
        tools:layout_conversion_wrapWidth="585" />

</android.support.constraint.ConstraintLayout>
